addons/monitoring/haproxy/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: kubernetes-monitoring
  annotations:
    haproxy.org/path-rewrite: /grafana(/|$)(.*) /\2
spec:
  ingressClassName: haproxy
  rules:
  - host: example.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
