addons/monitoring/haproxy/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-prometheus-server
  namespace: kubernetes-monitoring
  annotations:
    haproxy.org/auth-type: basic-auth
    haproxy.org/auth-secret: monitoring-prometheus
    haproxy.org/path-rewrite: /prometheus(/|$)(.*) /\2
spec:
  ingressClassName: haproxy
  rules:
  - host: example.com
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: monitoring-prometheus-server
            port:
              number: 80
